<?xml version="1.0" encoding="utf-8"?>
<resources>

    Main Activity
    <string name="app_name">Quiz Try</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="level">Level / Difficulty</string>
    <string name="scores">Scores / Achievements</string>
    <string name="settings">Settings</string>

    Quiz Screen
    <string name="title_activity_fullscreen">Quiz Main Page</string>
    <string name="button_answer1">Answer1</string>
    <string name="button_answer2">Answer2</string>
    <string name="button_answer3">Answer3</string>
    <string name="button_answer4">Answer4</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>



    Scores
    <string name="title_activity_scores">Scores</string>
    <string name="scores_play">Play</string>

    Settings
    <string name="title_activity_settings">Settings</string>
    <string name="settings_play">Play</string>
    <string name="title_activity_temporary_screen">TemporaryScreen</string>

    <string name="hello_world">Hello world!</string>

    Test
    <string name="edit_message">Enter a message</string>


</resources>
